# fin

./: .env.example  .gitignore  ARTIFACT_MODE.md  BLS_PRIME_GUIDE.md  BLS_State_Contract_v1.md  CHILE_DESK.md  Codex_context.md  PROPOSAL_TO_INTEGRATE_IDEAS.md  Procfile  README.md  SETUP_AUTH.md  Session.md  bls_state_object_example.json  middleware.js  next.config.mjs  nixpacks.toml  package-lock.json  package.json  phantom_terminal.jsx  proposal.md  proposal2.md  pyproject.toml  railway.toml  requirements.txt  response.md  start.sh  vercel.json
api/: [...path].js
app/: error.js  globals.css  layout.js  login-page.module.css  page.js  public-home.module.css
components/: portfolio-chat.jsx  portfolio-chat.module.css  terminal-app.jsx
contracts/: bls_state_v1.schema.json  bls_state_v2.schema.json
db/: schema.sql
docs/: NEON_MIGRATION_PLAN.md  RADICAL_PRODUCT_PROPOSAL.md  RECOVERABILITY_GUIDE.md  response_proposal.md
lib/: request-origin.js
public/: app.js  config.js  index.html  sw.js
scripts/: bootstrap-neon-holdings.mjs  build_meta_allocator_report.py  install_blsprime_autorefresh_task.ps1  neon-apply.mjs  publish_blsprime_artifact.ps1  redact_dashboard_artifact.py  refresh_blsprime_local.ps1  refresh_blsprime_local.sh  run_blsprime_autorefresh.sh  runtime-store-seed.mjs  runtime_store_seed.py  sync-static.mjs
tests/: test_allocator.py  test_chile_desk.py  (+16 more)
tests-node/: backend-snapshot-selection.test.mjs  config.test.mjs  dashboard-service.test.mjs  internal-refresh-auth.test.mjs  request-origin.test.mjs  workspace-action-validation.test.mjs
(+266 files in other folders)
