[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-allocator"
version = "0.1.0"
description = "Meta allocator routing engine for liquid US markets"
requires-python = ">=3.10"

[project.optional-dependencies]
# Install with: pip install -e ".[serve]"
serve = ["gunicorn>=22.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
meta_alpha_allocator = ["dashboard/static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
